<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shorts"
        android:icon="@drawable/ic_shorts"
        android:title="@string/title_shorts" />

    <item
        android:id="@+id/action_empty"
        android:title=""
        android:enabled="false"
        android:checkable="false"/>
    <item
        android:id="@+id/navigation_subscribe"
        android:icon="@drawable/ic_subscribe"
        android:title="@string/title_subscribe" />
    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store"/>

</menu>